# augur

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  commitlint.config.cjs  commitlint.config.js  pyproject.toml
.github/workflows/: ci.yml
config/: bus.toml  consumers.toml  dedup.toml  default.toml  detectors.toml  forbidden_tokens.toml  formatters.toml  labeling.toml  llm.toml  markets.toml  observability.toml  polling.toml  storage.toml
data/: investigation_prompts.toml
docs/: README.md  open-questions.md
docs/architecture/: adaptive-polling-spec.md  deduplication-and-storms.md  storage-and-scaling.md  system-design.md
docs/contracts/: consumer-registry.md  cross-package-compatibility.md  schema-and-versioning.md
docs/examples/: negative-paths.md  positive-paths.md
docs/foundations/: glossary.md  non-goals.md  overview.md  pitch.md
docs/methodology/: calibration-methodology.md  labeling-protocol.md  manipulation-taxonomy.md
docs/operations/: distributed-runbook.md  manual-testing.md
docs/strategy/: moat-thesis.md  risks-and-mitigations.md
ops/: README.md
ops/deploy/: configmap.yaml  hpa.yaml  kustomization.yaml  namespace.yaml  pollers.yaml  secrets.yaml  servicemonitor.yaml  services.yaml  singletons.yaml  stateless-workers.yaml
ops/docker/: .dockerignore  Dockerfile  compose.yaml  otel-collector.yaml  prometheus.yml
schemas/: FeatureVector-1.0.0.json  IntelligenceBrief-1.0.0.json  MarketSignal-1.0.0.json  MarketSnapshot-1.0.0.json  SignalContext-1.0.0.json
scripts/: backtest.py  calibrate.py  dual_write_sidecar.py  export_schemas.py  label.py  lint_detector_now.py  migrate_to_timescale.py  run_engine.py
src/augur_format/: pyproject.toml
src/augur_format/augur_format/: __init__.py  _compat.py  _config.py
src/augur_format/augur_format/deterministic/: __init__.py  json_feed.py  markdown.py  severity.py
src/augur_format/augur_format/deterministic/templates/: _base.md.j2  book_imbalance.md.j2  cross_market_divergence.md.j2  price_velocity.md.j2  regime_shift.md.j2  volume_spike.md.j2
src/augur_format/augur_format/llm/: __init__.py  interpreter.py  models.py
src/augur_format/augur_format/llm/backends/: __init__.py  anthropic.py  base.py  ollama.py
src/augur_format/augur_format/llm/linter/: __init__.py  forbidden_tokens.py  schema_check.py
src/augur_format/augur_format/llm/prompts/: __init__.py  builder.py
src/augur_format/augur_format/llm/prompts/templates/: _system.txt  book_imbalance.txt  cross_market_divergence.txt  price_velocity.txt  regime_shift.txt  volume_spike.txt
src/augur_format/augur_format/llm/provenance/: __init__.py  stamp.py
src/augur_format/augur_format/llm/routing/: __init__.py  consumer_gate.py
src/augur_format/augur_format/routing/: __init__.py  consumer_registry.py  router.py
src/augur_format/augur_format/transport/: __init__.py  retry.py  webhook.py  websocket.py
src/augur_format/augur_format/validate/: __init__.py  enum_check.py  schema_check.py
src/augur_labels/: pyproject.toml
src/augur_labels/augur_labels/: __init__.py  _compat.py  _config.py  _protocol.py
src/augur_labels/augur_labels/annotator/: __init__.py  agreement.py  candidate_queue.py  cli.py  workflow.py
src/augur_labels/augur_labels/join/: __init__.py  signal_to_event.py
src/augur_labels/augur_labels/models/: __init__.py  agreement.py  annotation.py  event.py  source.py
src/augur_labels/augur_labels/sources/: __init__.py  _http.py  ap.py  base.py  bloomberg.py  ft.py  reuters.py
src/augur_labels/augur_labels/storage/: __init__.py  _schema.py  parquet_writer.py  reader.py
src/augur_signals/: pyproject.toml
src/augur_signals/augur_signals/: __init__.py  _config.py  _logging.py  _observability.py  _observability_config.py  engine.py
src/augur_signals/augur_signals/bus/: __init__.py  _config.py  _lock.py  base.py  factory.py  memory.py  nats.py  redis_streams.py
src/augur_signals/augur_signals/calibration/: __init__.py  _config.py  drift_monitor.py  empirical_fpr.py  fdr_controller.py  liquidity_tier.py  reliability.py
src/augur_signals/augur_signals/context/: __init__.py  assembler.py  investigation_prompts.py  related.py  taxonomy.py
src/augur_signals/augur_signals/dedup/: __init__.py  _config.py  cluster.py  fingerprint.py  storm.py
src/augur_signals/augur_signals/detectors/: __init__.py  _bocpd.py  _config.py  _cusum.py  base.py  book_imbalance.py  cross_market.py  price_velocity.py  regime_shift.py  registry.py  volume_spike.py
src/augur_signals/augur_signals/features/: __init__.py  _config.py  indicators.py  pipeline.py  windows.py
src/augur_signals/augur_signals/ingestion/: __init__.py  _config.py  base.py  kalshi.py  normalizer.py  polymarket.py  retry.py  scheduler.py
src/augur_signals/augur_signals/manipulation/: __init__.py  _config.py  detector.py  episodes.py  signatures.py
src/augur_signals/augur_signals/models/: __init__.py  _identifiers.py  context.py  enums.py  features.py  signal.py  snapshot.py
src/augur_signals/augur_signals/storage/: __init__.py  _config.py  duckdb_store.py  factory.py  timescaledb_store.py
src/augur_signals/augur_signals/workers/: __init__.py  __main__.py  bootstrap.py  harness.py  poller.py  sharding.py  singleton.py  stateless.py  subjects.py
tests/: conftest.py  test_cross_package_compat.py
tests/format/: conftest.py  test_enum_validator.py  test_intelligence_brief.py  test_json_canonical.py  test_llm_backends.py  test_llm_interpreter.py  test_llm_linter.py  test_markdown_templates.py  test_prompt_builder.py  test_routing.py  test_severity.py  test_webhook.py  test_websocket.py
tests/labels/: conftest.py  test_agreement.py  test_cli.py  test_join.py  test_models.py  test_parquet_writer.py  test_sources.py  test_workflow.py
tests/signals/: conftest.py  test_bus_dedup.py  test_bus_factory.py  test_bus_lock.py  test_bus_nats.py  test_bus_redis.py  test_calibration.py  test_config.py  test_context.py  test_detector_registry.py  test_detectors_misc.py  test_distributed_config.py  test_engine_integration.py  test_export_schemas.py  test_features.py  (+15 more)
(+3 files in other folders)
