[project]
name = "augur"
version = "0.0.0"
description = "Structured market anomaly detection for prediction markets"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }

dependencies = [
    "augur-signals",
    "augur-labels",
    "augur-format",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = ["src/augur_signals", "src/augur_labels", "src/augur_format"]

[tool.uv.sources]
augur-signals = { workspace = true }
augur-labels = { workspace = true }
augur-format = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "ruff>=0.6",
    "mypy>=1.11",
    "pre-commit>=3.7",
    # Distributed-runtime clients and their test doubles. CI unit tests
    # exercise bus and storage adapters through dependency-injected
    # fakes; live NATS / Redis / TimescaleDB clusters are only required
    # for the opt-in integration tests.
    "fakeredis>=2.23",
    "nats-py>=2.7",
    "redis>=5.0",
    "psycopg[binary]>=3.1",
    "prometheus-client>=0.20",
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["schemas", "data", "labels", ".docs"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "B", "UP", "ANN", "ASYNC", "S", "RUF"]
ignore = ["ANN401"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "ANN", "B018"]
"scripts/**" = ["T201"]
# The IN-clause placeholders are built from "?" characters only;
# every value is passed as a parameter, not interpolated.
"src/augur_signals/augur_signals/storage/duckdb_store.py" = ["S608"]

[tool.ruff.lint.isort]
known-first-party = ["augur_signals", "augur_labels", "augur_format"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
disallow_any_unimported = true
mypy_path = ["src/augur_signals", "src/augur_labels", "src/augur_format"]
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["uuid_extensions.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pyarrow.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["filelock.*"]
ignore_missing_imports = true

# pyarrow has no type stubs; relax the no-any-unimported gate for the
# storage modules that pass pyarrow types across their public surface.
[[tool.mypy.overrides]]
module = [
    "augur_labels.storage._schema",
    "augur_labels.storage.parquet_writer",
    "augur_labels.storage.reader",
]
disallow_any_unimported = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# --cov-fail-under is applied only in CI so that targeted local runs
# (for example, pytest tests/signals/test_config.py) do not fail the
# threshold check against a single module's coverage.
addopts = "-ra --strict-markers --cov=src --cov-report=term-missing"
markers = [
    "unit: unit tests",
    "integration: integration tests requiring external services",
    "property: hypothesis property-based tests",
]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
