[project]
name = "augur-format"
version = "0.1.0"
description = "Formatters for Augur: deterministic JSON, Markdown, and gated LLM briefs"
requires-python = ">=3.12"

dependencies = [
    "pydantic>=2.7",
    "jinja2>=3.1",
    "httpx>=0.27",
    "websockets>=13.0",
    "augur-signals ~= 0.1.0",
]

[project.optional-dependencies]
llm-local = ["ollama>=0.3"]
llm-cloud = ["anthropic>=0.30"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["augur_format"]
include = ["augur_format/**/*.j2", "augur_format/**/*.txt"]
