[project]
name = "augur-labels"
version = "0.1.0"
description = "Newsworthy event labeling pipeline for Augur"
requires-python = ">=3.12"

dependencies = [
    "pydantic>=2.7",
    "pyarrow>=17.0",
    "httpx>=0.27",
    "click>=8.1",
    "filelock>=3.15",
    "augur-signals",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["augur_labels"]
