[project]
name = "augur-signals"
version = "0.0.0"
description = "Signal extraction core for Augur: detectors, calibration, context assembly"
requires-python = ">=3.12"

dependencies = [
    "pydantic>=2.7",
    "structlog>=24.0",
    "numpy>=2.0",
    "scipy>=1.13",
    "duckdb>=1.0",
    "aiohttp>=3.9",
    "uuid7>=0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["augur_signals"]
