[project]
name = "augur-signals"
version = "0.1.0"
description = "Signal extraction core for Augur: detectors, calibration, context assembly"
requires-python = ">=3.12"

dependencies = [
    "pydantic>=2.7",
    "structlog>=24.0",
    "numpy>=2.0",
    "scipy>=1.13",
    "duckdb>=1.0",
    "aiohttp>=3.9",
    "uuid7>=0.1",
]

[project.optional-dependencies]
# Installed when the multi-process runtime is deployed; the single-
# process monolith does not require any of these.
bus-nats = ["nats-py>=2.7"]
bus-redis = ["redis>=5.0"]
storage-timescale = ["psycopg[binary]>=3.1"]
observability = [
    "prometheus-client>=0.20",
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp>=1.27",
]
distributed = [
    "augur-signals[bus-nats,bus-redis,storage-timescale,observability]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["augur_signals"]
